Add logging and configuration management for Bluesky follower application
- Introduce logger package for structured logging with file and stdout support.
- Update .env-example to include new configuration options for timeout and logging.
- Enhance .gitignore to exclude log files and other generated artifacts.
- Implement UI styles for better presentation in terminal.
- Create models for configuration, session, and follow queue management.

--- a/.env-example
+++ b/.env-example
@@ -1,10 +1,10 @@
 # BlueSky API Configuration
 # Your Bluesky handle (e.g., username.bsky.social) or email address
-BSKY_IDENTIFIER=your.bsky.social
+BSKY_IDENTIFIER=your.handle.bsky.social
 
 # Your Bluesky app password (NOT your main account password)
 # Generate one at: https://bsky.app/settings/app-passwords
-BSKY_PASSWORD=your_app_password
+BSKY_PASSWORD=your_password
 
 # Application Settings
 # Enable detailed logging (true/false)
@@ -37,4 +37,7 @@ MIN_FOLLOWERS=0
 
 # Enable simulation mode (true/false)
 # When true, no actual follows will be performed
-SIMULATE=true 
+SIMULATE=true
+
+# Bluesky Configuration
+BSKY_TIMEOUT=10 
