--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,40 @@
-# Go
+# Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+bsky_follower
+
+# Test binary, built with `go test -c`
 *.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-/vendor/
-/go.sum
 
-# IDE - GoLand
-.idea/
-*.iml
-*.iws
-*.ipr
+# Dependency directories (remove the comment below to include it)
+vendor/
 
-# Environment
+# Go workspace file
+go.work
+
+# Environment variables
 .env
-.env.local
-.env.*.local
 
-# OS
-.DS_Store
-Thumbs.db
+# Database
+*.db
+*.db-journal
+
+# Logs
+logs/
+*.log
+
+# IDE specific files
+.idea/
+.vscode/
 *.swp
 *.swo
-*~
 
-# Project specific
-*.log 
-users.db
+# OS specific files
+.DS_Store
+Thumbs.db
